--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,4 +1,4 @@
 {
-"sha1": "C35E55B9EBB91E1F2BA7AAEF86860AAB3C64380D",
-"size": 10752
+"sha1": "d678237f0ff1fd4b619b7222206f5442db856886",
+"size": 1378816
 }
