--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,4 +1,4 @@
 {
-"sha1": "dbc438fa1bd4ab0a106a210c4d067cf3aeea62cf",
-"size": 2744320
+"sha1": "4435ab34e5e3b36135ad1ada6bd8e9fd05ab5d0c",
+"size": 254464
 }
