--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,5 +1,5 @@
 {
-"sha1": "c657ea07d4c7110c3bf016dabfcd685fbc9c25c2",
-"md5": "7c033cd543e571f8b29bf1623e1a1957",
-"size": 291328
+"sha1": "a",
+"md5": "a",
+"size": 1
 }
