--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,5 +1,5 @@
 {
-"sha1": "cef25d99117628da9fd6b6968b091f05ef424609",
-"md5": "8c0686dc402a9d175de8c234b582a078",
-"size": 300032
+"sha1": "qwedas",
+"md5": "aqwe",
+"size": 3169
 }
