--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,5 +1,5 @@
 {
-"sha1": "qwedas",
-"md5": "aqwe",
-"size": 3169
+"sha1": "61125f2f67fd45282d04a81a54b2b9efe21abe00",
+"md5": "b7164048b1878f8b44cc362c816e2e88",
+"size": 298496
 }
