--- a/AutoUpdaterLauncher.json
+++ b/AutoUpdaterLauncher.json
@@ -1,5 +1,5 @@
 {
-"sha1": "123",
-"md5": "123",
-"size": 123
+"sha1": "ee4e3db3b330ad002eb8f3b4d201d75e09ef0903",
+"md5": "ae4425e30783d30373126969686d2456",
+"size": 296960
 }
